[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
serde = "1"
serde_json = "1"
tap = "1"
parking_lot = "0.12"
bigdecimal = "0.3"
rand = "0.8"
chrono = "0.4"
chrono-tz = "0.6"
strfmt = "0.1.6"
num = "0.4"
async-trait = "0.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.diesel]
version = "2"
features = ["postgres", "chrono", "serde_json", "uuid", "numeric"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",

    "rustls_backend",

    "unstable_discord_api",
    "collector",
]

[dependencies.thiserror]
version = "1"

[dependencies.derivative]
version = "2"

